Applied css styles to improve the home hero section's action button.

--- a/Server/src/Server.Components/HeroSections/HeroHome.razor
+++ b/Server/src/Server.Components/HeroSections/HeroHome.razor
@@ -5,7 +5,7 @@
     <div class="hero-home__grid">
         <div class="hero-home__content">
             <h3 class="hero-home__heading">Save up to 50% on produce this week</h3>
-            <NavLink href="#" class="btn btn--primary"> Shop Now </NavLink>
+            <NavLink href="#" class="btn btn--lg btn--primary btn--pill"> Shop Now </NavLink>
         </div>
     </div>
 </div>
