--- a/styles/scss/components/_buttons.scss
+++ b/styles/scss/components/_buttons.scss
@@ -40,8 +40,8 @@
     &,
     &:link,
     &:visited {
-      padding: var.$spacing-m var.$spacing-2xl;
-      font-size: var.$fs-l;
+      padding: var.$spacing-m var.$spacing-xl;
+      font-size: var.$fs-m;
     }
   }
   
