Fixed the signup page layout so the conent is no longer squished to the left side.

--- a/Server/src/Server.Web/Components/Pages/SignUp.razor
+++ b/Server/src/Server.Web/Components/Pages/SignUp.razor
@@ -6,7 +6,7 @@
 
 <AppPageTitle> Sign Up </AppPageTitle>
 
-<PageLayout ContentWidth="ContentWidth.PageContent">
+<PageLayout ContentWidth="ContentWidth.PageFull">
     <h2 class="auth__title">Sign Up</h2>
     
     @if (!ShowConfirmation)
