Added missing NugetPackages.

--- a/Server/src/Server.Web/Components/Pages/Login.razor
+++ b/Server/src/Server.Web/Components/Pages/Login.razor
@@ -1,4 +1,5 @@
 @inherits OwningComponentBase
+@using Blazored.FluentValidation
 @using Application.Auth
 @using SunRaysMarket.Server.Components.Enums
 @inject IUserService UserService
