--- a/Server/src/Server.Web/Components/Pages/SignUp.razor
+++ b/Server/src/Server.Web/Components/Pages/SignUp.razor
@@ -1,3 +1,4 @@
+@using Blazored.FluentValidation
 @using Application.Auth
 @using SunRaysMarket.Server.Components.Enums
 @inherits OwningComponentBase<IUserService>
@@ -8,59 +9,59 @@
 
 <PageLayout ContentWidth="ContentWidth.PageFull">
     <h2 class="auth__title">Sign Up</h2>
-    
+
     @if (!ShowConfirmation)
     {
-           <EditForm class="form--auth" 
-              method="post" 
-              Model="@SignUpModel" 
-              OnValidSubmit="SignUpUser"
-              FormName="signUpForm">
-        <FluentValidationValidator />
-        <ValidationSummary />
-        <div>
-            <InputText type="email"
-                       class="form__input"
-                       placeholder="Enter your email address"
-                       id="signUpEmail"
-                       @bind-Value="@SignUpModel!.Email"/>
-            <label for="signUpEmail" class="form__label form__label--input">Email</label>
-        </div>
-        <div>
-            <InputText type="password"
-                       class="form__input"
-                       placeholder="Enter your password"
-                       id="signUpPassword"
-                       @bind-Value="@SignUpModel!.Password"/>
-            <label for="signUpPassword" class="form__label form__label--input">Password</label>
-        </div>
+        <EditForm class="form--auth"
+                  method="post"
+                  Model="@SignUpModel"
+                  OnValidSubmit="SignUpUser"
+                  FormName="signUpForm">
+            <FluentValidationValidator/>
+            <ValidationSummary/>
+            <div>
+                <InputText type="email"
+                           class="form__input"
+                           placeholder="Enter your email address"
+                           id="signUpEmail"
+                           @bind-Value="@SignUpModel!.Email"/>
+                <label for="signUpEmail" class="form__label form__label--input">Email</label>
+            </div>
+            <div>
+                <InputText type="password"
+                           class="form__input"
+                           placeholder="Enter your password"
+                           id="signUpPassword"
+                           @bind-Value="@SignUpModel!.Password"/>
+                <label for="signUpPassword" class="form__label form__label--input">Password</label>
+            </div>
 
-        <div>
-            <InputText type="password"
-                       class="form__input"
-                       placeholder="Confirm your password"
-                       id="signUpPasswordConfirm"
-                       @bind-Value="@SignUpModel!.ConfirmPassword"/>
-            <label for="signUpPasswordConfirm" class="form__label form__label--input">Confirm Password</label>
-        </div>
+            <div>
+                <InputText type="password"
+                           class="form__input"
+                           placeholder="Confirm your password"
+                           id="signUpPasswordConfirm"
+                           @bind-Value="@SignUpModel!.ConfirmPassword"/>
+                <label for="signUpPasswordConfirm" class="form__label form__label--input">Confirm Password</label>
+            </div>
 
-        <div>
-            <InputText class="form__input"
-                       placeholder="Enter your first name"
-                       id="signUpFirstName"
-                       @bind-Value="@SignUpModel!.FirstName"/>
-            <label for="signUpFirstName" class="form__label form__label--input">First Name</label>
-        </div>
-        <div>
-            <InputText class="form__input"
-                   placeholder="Enter your last name"
-                   id="signUpLastName"
-                   @bind-Value="@SignUpModel!.LastName"/>
-            <label for="signUpLastName" class="form__label form__label--input">Last Name</label>
-        </div>
+            <div>
+                <InputText class="form__input"
+                           placeholder="Enter your first name"
+                           id="signUpFirstName"
+                           @bind-Value="@SignUpModel!.FirstName"/>
+                <label for="signUpFirstName" class="form__label form__label--input">First Name</label>
+            </div>
+            <div>
+                <InputText class="form__input"
+                           placeholder="Enter your last name"
+                           id="signUpLastName"
+                           @bind-Value="@SignUpModel!.LastName"/>
+                <label for="signUpLastName" class="form__label form__label--input">Last Name</label>
+            </div>
 
-        <button type="submit" class="btn btn--primary btn--md">Sign Up</button>
-    </EditForm> 
+            <button type="submit" class="btn btn--primary btn--md">Sign Up</button>
+        </EditForm>
     }
     else
     {
@@ -68,22 +69,20 @@
             <p>You have successfully signed up.</p>
         </div>
     }
-    
+
 
 </PageLayout>
 
 @code {
-    [SupplyParameterFromForm]
-    public SignUpModel? SignUpModel { get; set; }
-    
+    [SupplyParameterFromForm] public SignUpModel? SignUpModel { get; set; }
+
     private bool ShowConfirmation { get; set; }
-    
+
     protected override void OnInitialized() => SignUpModel ??= new SignUpModel();
 
     public async Task SignUpUser()
     {
-        
-        var signUpResult = await Service.SignUpAsync(SignUpModel!, new [] { Role.Customer });
+        var signUpResult = await Service.SignUpAsync(SignUpModel!, new[] { Role.Customer });
         ShowConfirmation = signUpResult.WasSuccessful;
     }
 
