Added extension methods to automatically register services from a specified namespace.

--- a/Server/src/Server.Web/Components/Pages/Login.razor
+++ b/Server/src/Server.Web/Components/Pages/Login.razor
@@ -1,6 +1,6 @@
 @inherits OwningComponentBase
 @using Blazored.FluentValidation
-@using Application.Auth
+@using SunRaysMarket.Server.Application.Services.Auth
 @using SunRaysMarket.Server.Components.Enums
 @inject IUserService UserService
 @page "/login"
