--- a/Server/src/Server.Web/Components/Pages/Logout.razor
+++ b/Server/src/Server.Web/Components/Pages/Logout.razor
@@ -1,5 +1,4 @@
-@using Application.Auth
-@inherits OwningComponentBase<IUserService>
+@inherits OwningComponentBase<SunRaysMarket.Server.Application.Services.Auth.IUserService>
 @page "/logout"
 
 @code {
