--- a/Server/src/Server.Web/Components/_Imports.razor
+++ b/Server/src/Server.Web/Components/_Imports.razor
@@ -11,6 +11,7 @@
 @using SunRaysMarket.Server.Application.Services
 @using SunRaysMarket.Server.Components
 @using SunRaysMarket.Server.Web.Components.Layout
+@using SunRaysMarket.Server.Web.Components.Error
 @using SunRaysMarket.Shared.Core.DomainModels
 @using SunRaysMarket.Shared.Services.Interfaces
 @using SunRaysMarket.Server.Application.UnitOfWork
