Added functionality to allow user to select their preferred store location.

--- a/Server/src/Server.Web/Components/Layout/TopBarNav.razor
+++ b/Server/src/Server.Web/Components/Layout/TopBarNav.razor
@@ -1,17 +1,5 @@
             <nav class="topbar__nav">
-                <a href="#" class="store">
-                    <svg class="store__icon">
-                        <use href="/img/icons/solid.svg#store"></use>
-                    </svg>
-
-                    <h6 class="store__heading">
-                        Your Store
-                    </h6>
-                    <span class="store__location">North McAllen</span>
-                    <svg class="store__chevron">
-                        <use href="/img/icons/solid.svg#chevron-down"></use>
-                    </svg>
-                </a>
+                <PreferredStoreSelector />
                 <NavLink href="shopping-cart" class="cart">
                     <svg class="cart__icon">
                         <use href="/img/icons/solid.svg#cart-shopping"></use>
