--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -76,3 +76,7 @@ $footer-height: 25rem;
 
 // vertical content span
 $vertical-content-height: calc(100vh - ($topbar-height + $navbar-height + $footer-height));
+
+// box shadows
+$shadow-light: 0 2rem 4rem rgba(0, 0, 0, .1);
+$shadow-dark: 0 2rem 4rem rgba(0, 0, 0, .2);
