--- a/Server/src/Server.Web/Components/Pages/Checkout.razor
+++ b/Server/src/Server.Web/Components/Pages/Checkout.razor
@@ -1,12 +1,16 @@
 @page "/checkout"
+@inherits OwningComponentBase<ICartService>
 @using SunRaysMarket.Server.Components.Enums
 
 <AuthorizeView Roles="Customer">
     <Authorized>
-        <PageLayout CssClasses="checkout" ContentWidth="ContentWidth.PageFull" Element="div">
-            <h1 class="">Checkout</h1>
-            <CheckoutContent/>
-        </PageLayout>
+        @if (ShowContent)
+        {
+            <PageLayout CssClasses="checkout" ContentWidth="ContentWidth.PageFull" Element="div">
+                <h1 class="">Checkout</h1>
+                <CheckoutContent Summary="@Summary"/>
+            </PageLayout> 
+        }
     </Authorized>
     <NotAuthorized>
         <AutoNavigator Route="login" />
@@ -15,5 +19,13 @@
 
 
 @code {
+    private CartSummaryModel Summary { get; set; } = default!;
+    private bool ShowContent { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        Summary = (await Service.GetActiveCartItemsAsync()).GetCartSummary();
+        ShowContent = true;
+    }
 
 }
